# SyscallMind

./: Cargo.toml  README.md
anomaly/: Cargo.toml
anomaly/src/: baseline.rs  detector.rs  lib.rs  policy.rs
benches/: end_to_end.rs
common/: Cargo.toml
common/src/: lib.rs
config/: default.toml  production.toml
design/: DESIGN.md
docs/: anomaly_detection.md  architecture.md  ml_design.md  safety_proofs.md
ml/inference/: Cargo.toml
ml/inference/src/: anomaly_inference.rs  lib.rs  predictor.rs
ml/training/: requirements.txt
ml/training/anomaly/: export_onnx.py  isolation_forest.py
ml/training/graph/: graph_model.py  train_graph.py
ml/training/transformer/: export_onnx.py  model.py  train.py
optimizer/: Cargo.toml
optimizer/src/: batcher.rs  cache.rs  dedup.rs  lib.rs  prefetcher.rs
optimizer/tests/: optimizer_tests.rs
pipeline/: Cargo.toml
pipeline/src/: arrow_serializer.rs  lib.rs  ring_buffer.rs  window_builder.rs
runtime/: Cargo.toml
runtime/src/: lib.rs  syscall_handler.rs  syscall_registry.rs  trace_emitter.rs
runtime/tests/: syscall_handler_tests.rs
safety/: Cargo.toml
safety/src/: classifier.rs  dependency_checker.rs  lib.rs  validator.rs
scripts/: generate_traces.sh  run_benchmarks.sh  train_all.sh
