[workspace]
members = [
    "common",
    "runtime",
    "pipeline",
    "optimizer",
    "safety",
    "ml/inference",
    "anomaly",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
crossbeam = "0.8"
crossbeam-channel = "0.5"
fnv = "1"
lru = "0.12"
parking_lot = "0.12"
rand = "0.8"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
criterion = { version = "0.5", features = ["html_reports"] }

[package]
name = "syscallmind"
version.workspace = true
edition.workspace = true

[dependencies]
syscallmind-common    = { path = "common" }
syscallmind-runtime   = { path = "runtime" }
syscallmind-pipeline  = { path = "pipeline" }
syscallmind-optimizer = { path = "optimizer" }
syscallmind-safety    = { path = "safety" }
syscallmind-anomaly   = { path = "anomaly" }
serde.workspace       = true
serde_json.workspace  = true
tracing.workspace     = true
tracing-subscriber.workspace = true
tokio.workspace       = true
clap.workspace        = true
toml.workspace        = true
rand.workspace        = true
anyhow.workspace      = true

[[bin]]
name = "syscallmind-runtime"
path = "src/bin/syscallmind_runtime.rs"

[[bin]]
name = "workload-generator"
path = "src/bin/workload_generator.rs"

[[bin]]
name = "replay-harness"
path = "src/bin/replay_harness.rs"

[[bench]]
name = "end_to_end"
harness = false
