[package]
name = "syscallmind-anomaly"
version.workspace = true
edition.workspace = true

[dependencies]
syscallmind-common = { path = "../common" }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
parking_lot.workspace = true
