[package]
name = "syscallmind-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
syscallmind-common = { path = "../common" }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
crossbeam-channel.workspace = true
fnv.workspace = true
parking_lot.workspace = true
rand.workspace = true

[dev-dependencies]
tokio = { workspace = true }
